# rb_rainbowarm_ros2

./: .gitignore  README.md
doc/: model_description.md  rbfunc.md
rb5_pnp/: setup.py
rb5_pnp/launch/: rb5_camera_tf.launch.py
rb5_pnp/rb5_pnp/: rb5_pnp_aruco_detection.py  rb5_pnp_aruco_grasp.py  rb5_pnp_constant.py  util_eyeinhand_tf.py
rb_controller/: package.xml  setup.cfg  setup.py
rb_controller/launch/: rb_bringup.launch.py
rb_controller/rb_controller/: bridge_api.py  controller_node.py  rb_driver.py  rb_rosbridge.py
rb_description/: CMakeLists.txt  package.xml
rb_description/launch/: simple.launch.py  view.launch.py
rb_description/meshes/rb5/collision/: _10_module_6.stl  _11_tool_flange.stl  _1_base.stl  _2_module_1.stl  _3_module_2.stl  _4_pipe_1.stl  _5_module_3.stl  _6_module_dummy.stl  _7_pipe_2.stl  _8_module_4.stl  _9_module_5.stl
rb_description/meshes/rb5/visual/: _10_module_6.dae  _11_tool_flange.dae  _2_module_1.dae  _3_module_2.dae  _4_pipe_1.dae  _5_module_3.dae  _7_pipe_2.dae  _8_module_4.dae  _9_module_5.dae
rb_description/rviz/: rviz_config.rviz
rb_description/urdf/: rb5.urdf  simple_robot.urdf
rb_interfaces/: CMakeLists.txt  package.xml
rb_interfaces/action/: ReqJntTraj.action  ReqTcpTraj.action
rb_interfaces/srv/: ReqJnt.srv  ReqTcp.srv
rb_usage/: package.xml  setup.cfg  setup.py
rb_usage/rb_usage/: req_joint_ctrl.py  req_joint_traj.py  req_tcp_ctrl.py
